update swagger documentation for API and Scheduler
